--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow==2.5.2
 South==1.0
 django-appconf==0.6
 django-bootstrap3==4.10.0
+django-crispy-forms==1.4.0
 django-geoposition==0.2.2
 django-markdown-deux==1.0.4
 django-staticfiles==1.2.1
